==> Embedfire-WiFi-AP/wifi-ap6181-h743pro-code/WiFi_SDK/WICED/platform/MCU/STM32H7xx/WWD/wwd_SDIO.c <==
#include <string.h> /* For memcpy */
#include "wwd_platform_common.h"
#include "wwd_bus_protocol.h"
#include "wwd_assert.h"
#include "platform/wwd_platform_interface.h"
#include "platform/wwd_sdio_interface.h"
#include "platform/wwd_bus_interface.h"
#include "RTOS/wwd_rtos_interface.h"
#include "network/wwd_network_constants.h"
#include "platform_cmsis.h"
#include "platform_peripheral.h"
#include "platform_config.h"
#include "wwd_rtos_isr.h"
#define COMMAND_FINISHED_CMD52_TIMEOUT_LOOPS (100000)
#define COMMAND_FINISHED_CMD53_TIMEOUT_LOOPS (100000)
#define SDIO_TX_RX_COMPLETE_TIMEOUT_LOOPS    (100000)
#define SDIO_DMA_TIMEOUT_LOOPS               (1000000)
#define MAX_TIMEOUTS                         (30)
#define SDIO_ERROR_MASK                      ( SDMMC_STA_CCRCFAIL | SDMMC_STA_DCRCFAIL | SDMMC_STA_CTIMEOUT | SDMMC_STA_DTIMEOUT | SDMMC_STA_TXUNDERR | SDMMC_STA_RXOVERR )
#define SDIO_IRQ_CHANNEL                     (0x31)
#define BUS_LEVEL_MAX_RETRIES                (5)
#define SDIO_ENUMERATION_TIMEOUT_MS          (500)

static void sdio_enable_bus_irq( void )
{
    SDMMC1->MASK |= SDMMC_IT_DCRCFAIL | SDMMC_IT_DTIMEOUT | SDMMC_IT_RXOVERR | SDMMC_IT_TXUNDERR | SDMMC_IT_DATAEND;
}

wwd_result_t host_platform_bus_init( void )
{
    SDMMC_InitTypeDef sdio_init_structure;
    wwd_result_t result;
    uint8_t a;
    HAL_StatusTypeDef HAL_return;

    platform_mcu_powersave_disable( );

    /* Reset SDIO Block */
    SDMMC_PowerState_OFF( SDMMC1 );
    __HAL_RCC_SDMMC1_FORCE_RESET( );
    __HAL_RCC_SDMMC1_RELEASE_RESET( );

    /* Enable the SDIO Clock */
    __HAL_RCC_SDMMC1_CLK_ENABLE( );

    result = host_rtos_init_semaphore( &sdio_transfer_finished_semaphore );
    if ( result != WWD_SUCCESS )
    {
        return result;
    }

    /* Clear all SDIO interrupts */
    SDMMC1->ICR = (uint32_t) 0xffffffff;

    /* Turn on SDIO IRQ */
    /* Must be lower priority than the value of configMAX_SYSCALL_INTERRUPT_PRIORITY */
    /* otherwise FreeRTOS will not be able to mask the interrupt */
    /* keep in mind that ARMCM7 interrupt priority logic is inverted, the highest value */
    /* is the lowest priority */
    HAL_NVIC_EnableIRQ( (IRQn_Type) SDIO_IRQ_CHANNEL );

#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_0
    /* Set GPIO_B[1:0] to 00 to put WLAN module into SDIO mode */
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0] );
#endif
#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_1
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1] );
#endif

    /* Setup GPIO pins for SDIO data & clock */
    for ( a = WWD_PIN_SDIO_CLK; a < WWD_PIN_SDIO_MAX; a++ )
    {
        if ( PLATFORM_SUCCESS != platform_gpio_set_alternate_function( 
				wifi_sdio_pins[ a ].port, 
				wifi_sdio_pins[ a ].pin_number, 
				GPIO_MODE_AF_PP, 
				GPIO_PULLUP, 
				GPIO_AF12_SDIO1 ) )
        {
            return WICED_ERROR;
        }
    }

    /* SDMMC Initialization Frequency (400KHz max) for IP CLK 200MHz*/
    sdio_init_structure.ClockDiv            = SDMMC_INIT_CLK_DIV;
    sdio_init_structure.ClockEdge           = SDMMC_CLOCK_EDGE_RISING;
    sdio_init_structure.ClockPowerSave      = SDMMC_CLOCK_POWER_SAVE_DISABLE;
    sdio_init_structure.BusWide             = SDMMC_BUS_WIDE_1B;
    sdio_init_structure.HardwareFlowControl = SDMMC_HARDWARE_FLOW_CONTROL_DISABLE;
    HAL_return                              = SDMMC_Init( SDMMC1, sdio_init_structure );
    HAL_return                             |= SDMMC_PowerState_ON( SDMMC1 );
    HAL_return                             |= SDMMC_SetSDMMCReadWaitMode( SDMMC1, SDMMC_READ_WAIT_MODE_CLK );

    if ( HAL_return |= HAL_OK )
    {
        return (~WWD_SUCCESS);
    }

    platform_mcu_powersave_enable( );
    return WWD_SUCCESS;
}

wwd_result_t host_platform_bus_init( void )
{
    SDMMC_InitTypeDef sdio_init_structure;
    wwd_result_t result;
    uint8_t a;
    HAL_StatusTypeDef HAL_return;

    platform_mcu_powersave_disable( );

    /* Reset SDIO Block */
    SDMMC_PowerState_OFF( SDMMC1 );
    __HAL_RCC_SDMMC1_FORCE_RESET( );
    __HAL_RCC_SDMMC1_RELEASE_RESET( );

    /* Enable the SDIO Clock */
    __HAL_RCC_SDMMC1_CLK_ENABLE( );

    result = host_rtos_init_semaphore( &sdio_transfer_finished_semaphore );
    if ( result != WWD_SUCCESS )
    {
        return result;
    }

    /* Clear all SDIO interrupts */
    SDMMC1->ICR = (uint32_t) 0xffffffff;

    /* Turn on SDIO IRQ */
    /* Must be lower priority than the value of configMAX_SYSCALL_INTERRUPT_PRIORITY */
    /* otherwise FreeRTOS will not be able to mask the interrupt */
    /* keep in mind that ARMCM7 interrupt priority logic is inverted, the highest value */
    /* is the lowest priority */
    HAL_NVIC_EnableIRQ( (IRQn_Type) SDIO_IRQ_CHANNEL );

#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_0
    /* Set GPIO_B[1:0] to 00 to put WLAN module into SDIO mode */
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0] );
#endif
#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_1
    platform_gpio_init( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1], OUTPUT_PUSH_PULL );
    platform_gpio_output_low( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1] );
#endif

		SD_LowLevel_Init();//WIFI SDIO初始化

    /* SDMMC Initialization Frequency (400KHz max) for IP CLK 200MHz*/

    sdio_init_structure.ClockDiv            = SDMMC_INIT_CLK_DIV;
    sdio_init_structure.ClockEdge           = SDMMC_CLOCK_EDGE_RISING;
    sdio_init_structure.ClockPowerSave      = SDMMC_CLOCK_POWER_SAVE_DISABLE;
    sdio_init_structure.BusWide             = SDMMC_BUS_WIDE_1B;
    sdio_init_structure.HardwareFlowControl = SDMMC_HARDWARE_FLOW_CONTROL_DISABLE;
    HAL_return                              = SDMMC_Init( SDMMC1, sdio_init_structure );

    HAL_return                             |= SDMMC_PowerState_ON( SDMMC1 );

    HAL_return                             |= SDMMC_SetSDMMCReadWaitMode( SDMMC1, SDMMC_READ_WAIT_MODE_CLK );

    if ( HAL_return |= HAL_OK )
    {
        return (~WWD_SUCCESS);
    }

    platform_mcu_powersave_enable( );
    return WWD_SUCCESS;
}

wwd_result_t host_platform_bus_deinit( void )
{

    wwd_result_t result = WWD_SUCCESS;
    uint32_t a;

    result = host_rtos_deinit_semaphore( &sdio_transfer_finished_semaphore );

    platform_mcu_powersave_disable( );

    sdio_disable_bus_irq( );

    SDMMC_PowerState_OFF( SDMMC1 );
    __HAL_RCC_SDMMC1_CLK_DISABLE( );

    for ( a = 0; a < WWD_PIN_SDIO_MAX; a++ )
    {
        platform_gpio_deinit( &wifi_sdio_pins[ a ] );
    }

#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_0
    platform_gpio_deinit( &wifi_control_pins[WWD_PIN_BOOTSTRAP_0] );
#endif
#ifdef WICED_WIFI_USE_GPIO_FOR_BOOTSTRAP_1
    platform_gpio_deinit( &wifi_control_pins[WWD_PIN_BOOTSTRAP_1] );
#endif

    /* Turn off SDIO IRQ */
    NVIC_DisableIRQ( (IRQn_Type) SDIO_IRQ_CHANNEL );

    platform_mcu_powersave_enable( );
    return result;
}

wwd_result_t host_platform_sdio_transfer( wwd_bus_transfer_direction_t direction, sdio_command_t command, sdio_transfer_mode_t mode, sdio_block_size_t block_size, uint32_t argument, /*@null@*/uint32_t* data, uint16_t data_size, sdio_response_needed_t response_expected, /*@out@*//*@null@*/uint32_t* response )
{
    uint32_t loop_count = 0;
    wwd_result_t result = WWD_UNSUPPORTED;
    uint16_t attempts = 0;

    wiced_assert( "Bad args", !((command == SDIO_CMD_53) && (data == NULL)) );

    if ( response != NULL )
    {
        *response = 0;
    }

    platform_mcu_powersave_disable( );

    restart: SDMMC1->ICR = (uint32_t) 0xFFFFFFFF;
    sdio_transfer_failed = WICED_FALSE;
    ++attempts;

    /* Check if we've tried too many times */
    if ( attempts >= (uint16_t) BUS_LEVEL_MAX_RETRIES )
    {
        result = WWD_SDIO_RETRIES_EXCEEDED;
        goto exit;
    }

    /* 准备数据传输寄存器 */
    current_command = command;
    if ( command == SDIO_CMD_53 )
    {
        sdio_enable_bus_irq( );

        /* Dodgy STM32 hack to set the CMD53 byte mode size to be the same as the block size */
        if ( mode == SDIO_BYTE_MODE )
        {
            block_size = find_optimal_block_size( data_size );
            if ( block_size < SDIO_512B_BLOCK )
            {
                argument = ( argument & (uint32_t) ( ~0x1FF ) ) | block_size;
            }
            else
            {
                argument = ( argument & (uint32_t) ( ~0x1FF ) );
            }
        }

        /* 准备SDIO传输数据 */
        current_transfer_direction = direction;
        sdio_prepare_data_transfer( direction, block_size, (uint8_t*) data, data_size );

        /* 发送命令 */
        SDMMC1->ARG = argument;
        SDMMC1->CMD = (uint32_t) ( command | SDMMC_RESPONSE_SHORT | SDMMC_WAIT_NO | SDMMC_CPSM_ENABLE | SDMMC_CMD_CMDTRANS );

        /* 等待整个传输完成 */	//等待获取信号量
        result = host_rtos_get_semaphore( &sdio_transfer_finished_semaphore, (uint32_t) 50, WICED_TRUE );

        /* 等到完成 （loop_count一个等待的时间）*/
        loop_count = (uint32_t) SDIO_TX_RX_COMPLETE_TIMEOUT_LOOPS;

	
				while(1)
				{
							if ( loop_count == 0 || ( ( response_expected == RESPONSE_NEEDED ) && ( ( SDMMC1->STA & SDIO_ERROR_MASK ) != 0 ) ) )
							{
									goto restart;
							}
							loop_count--;					
							if(( SDMMC1->STA & ( SDMMC_STA_CPSMACT | SDMMC_STA_DPSMACT ) ) == 0 )
								{//等待条件成立，等待发送结束
									break;
							}
				}
				
				

        if ( direction == BUS_READ )
        {
            memcpy( user_data, dma_data_source, (size_t) user_data_size );
        }

    }
    /* ALl SDIO CMD other than CMD53 */
    else
    {
        uint32_t temp_sta;

			/* 发送命令*/
        SDMMC1->ARG = argument;
        SDMMC1->CMD = (uint32_t) ( command | SDMMC_RESPONSE_SHORT | SDMMC_WAIT_NO | SDMMC_CPSM_ENABLE );

        loop_count = (uint32_t) COMMAND_FINISHED_CMD52_TIMEOUT_LOOPS;

		
			while(1)
			{
						temp_sta = SDMMC1->STA;
					  if ( loop_count == 0 || ( ( response_expected == RESPONSE_NEEDED ) && ( ( temp_sta & SDIO_ERROR_MASK ) != 0 ) ) )
            {
                goto restart;
            }
						loop_count--;					
						if(( temp_sta & ( SDMMC_STA_CPSMACT | SDMMC_STA_DPSMACT ) ) == 0 )
							{//等待条件成立，等待发送结束
								break;
						}
			}

    
		
		}
		

    if ( response != NULL )
    {
        *response = SDMMC1->RESP1;
    }
    result = WWD_SUCCESS;
    SDMMC1->CMD = 0;

    exit: platform_mcu_powersave_enable( );
    return result;
}

static void sdio_prepare_data_transfer( wwd_bus_transfer_direction_t direction, sdio_block_size_t block_size, /*@unique@*/uint8_t* data, uint16_t data_size ) /*@modifies dma_data_source, user_data, user_data_size, dma_transfer_size@*/
{
    /* Setup a single transfer using the temp buffer */
    user_data = data;
    user_data_size = data_size;
    dma_transfer_size = (uint32_t) ( ( ( data_size + (uint16_t) block_size - 1 ) / (uint16_t) block_size ) * (uint16_t) block_size );

    if ( direction == BUS_WRITE )
    {
        dma_data_source = data;
    }
    else
    {
        dma_data_source = temp_dma_buffer;
    }

    SDMMC1->DTIMER    = (uint32_t) SDMMC_DATATIMEOUT;
    SDMMC1->DLEN      = dma_transfer_size;
    SDMMC1->DCTRL     = (uint32_t) sdio_get_blocksize_dctrl( block_size ) | bus_direction_mapping[ (int) direction ] | SDMMC_TRANSFER_MODE_BLOCK | SDMMC_DPSM_DISABLE | SDMMC_DCTRL_SDIOEN;

    SDMMC1->IDMACTRL  = SDMMC_ENABLE_IDMA_SINGLE_BUFF;
		SDMMC1->IDMABASE0 = (uint32_t) dma_data_source;
	
}

wwd_result_t host_platform_enable_high_speed_sdio( void )
{
    SDMMC_InitTypeDef sdio_init_structure;

    /* bus_clock = input_clock / ( 2 * Clockdiv) */
#ifdef SLOW_SDIO_CLOCK
    sdio_init_structure.ClockDiv       = (uint8_t) 10; /* 10 = 10 MHz if SDIO clock = 200MHz */
#else
    sdio_init_structure.ClockDiv       = SDMMC_NSpeed_CLK_DIV; /* 4 = 25MHz if SDIO clock = 200MHz */
#endif
    sdio_init_structure.ClockEdge      = SDMMC_CLOCK_EDGE_RISING;
    sdio_init_structure.ClockPowerSave = SDMMC_CLOCK_POWER_SAVE_DISABLE;
#ifndef SDIO_1_BIT
    sdio_init_structure.BusWide        = SDMMC_BUS_WIDE_4B;
#else
    sdio_init_structure.BusWide        = SDMMC_BUS_WIDE_1B;
#endif
    sdio_init_structure.HardwareFlowControl = SDMMC_HARDWARE_FLOW_CONTROL_DISABLE;

    SDMMC_Init( SDMMC1, sdio_init_structure );
    return WWD_SUCCESS;
}

static uint32_t sdio_get_blocksize_dctrl( sdio_block_size_t block_size )
{
    switch ( block_size )
    {
        case SDIO_1B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_1B;
        case SDIO_2B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_2B;
        case SDIO_4B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_4B;
        case SDIO_8B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_8B;
        case SDIO_16B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_16B;
        case SDIO_32B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_32B;
        case SDIO_64B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_64B;
        case SDIO_128B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_128B;
        case SDIO_256B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_256B;
        case SDIO_512B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_512B;
        case SDIO_1024B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_1024B;
        case SDIO_2048B_BLOCK:
            return SDMMC_DATABLOCK_SIZE_2048B;
        default:
            return 0;
    }
}
